--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -135,7 +135,7 @@
             </div>
           </div>
           <div class="row center-align">
-            <a class="btn-large btn-primary hover-right" data-sr="wait 3s, enter left, move 100px">
+            <a href="{% url 'blog-all-posts' %}" class="btn-large btn-primary hover-right" data-sr="wait 3s, enter left, move 100px">
               Search Articles <i class="material-icons right">arrow_forward</i>
               <i class="material-icons left">search</i>
             </a>
