--- a/blog/templates/blog/my_blog.html
+++ b/blog/templates/blog/my_blog.html
@@ -14,7 +14,7 @@
       <div class="inner-content">
         <div id="new-blog-post" class="col s12">Write new post</div>
         <div id="my-blog-posts" class="col s12">Edit posts</div>
-        <div id="my-blog-blog" class="col s12">Edit your blog info</div>
+        <div id="my-blog-blog" class="col s12">Edit {{ object }}</div>
         <div id="my-blog-stats" class="col s12">Coming Soon</div>
       </div>
     </div>
