--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -7,7 +7,7 @@ $secondary-color-light: lighten(#ED8C72, 15%);
 $secondary-color-dark: darken(#ED8C72, 15%);
 
 // brand colors
-$brand-light-gray: #eee;
+$brand-light-gray: #efefef;
 $brand-medium-gray: #777;
 
 $dark-texture: url("/static/img/textures/texture_dark.png") repeat;
