--- a/blog/templates/blog/my_blog.html
+++ b/blog/templates/blog/my_blog.html
@@ -1,4 +1,5 @@
 {% extends "layouts/2col.html" %}
+{% load crispy_forms_tags %}
 
 {% block sidelayout_content %}
   <div class="my-blog">
@@ -13,11 +14,11 @@
       </div>
       <div class="inner-content">
         <div id="new-blog-post" class="col s12">
-          <div class="container" style="margin-top:20px;">
+          <h1>Create a new post</h1>
+          <div class="container">
             <form method="post" action="{% url 'blog-post-create' %}" enctype="multipart/form-data">
               {% csrf_token %}
-              {{post_create_form.as_p}}
-              <button class="btn" type="submit">Submit</button>
+              {% crispy post_create_form %}
             </form>
           </div>
         </div>
@@ -27,4 +28,13 @@
       </div>
     </div>
   <div>
+{% endblock %}
+
+
+{% block js %}
+  <script>
+    $(document).ready(function() {
+      $('select').material_select();
+    });
+  </script>
 {% endblock %}
