--- a/blog/templates/blog/post_create.html
+++ b/blog/templates/blog/post_create.html
@@ -1,11 +1,12 @@
 {% extends "layouts/2col.html" %}
+{% load crispy_forms_tags %}
 
 {% block sidelayout_content %}
+  <h1>Create New Post</h1>
   <div class="container" style="margin-top:20px;">
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
-      {{ form }}
-      <button class="btn" type="submit">Submit</button>
+      {% crispy form %}
     </form>
   </div>
 {% endblock %}
