--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -12,6 +12,8 @@
   5. Blog
   6. Auth
   7. Map
+  8. Materialize Crispy
+  9. Forms
 */
 
 
@@ -35,6 +37,11 @@ footer { background: $dark-texture; }
 
 ul.horizontal {
   li { display: inline; }
+}
+
+h1, h2, h3 {
+  font-weight: 200;
+  text-align: center;
 }
 
 // textures
@@ -456,6 +463,7 @@ $nav-width: 15%;
     position: fixed;
     top: 0;
     width: (100% - $nav-width)!important;
+    z-index: 1;
 
     li { border-bottom: 2px solid $brand-light-gray; }
   }
@@ -546,5 +554,41 @@ $nav-width: 15%;
     width: 80%;
     margin-left: 10%;
     border-radius: $border-radius;
+  }
+}
+
+// ==== 8. MATERIALIZE CRISPY ===== //
+fieldset {
+  min-width: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
+
+  legend {
+    text-align: center;
+    font-size: 2em;
+  }
+}
+
+input[type="checkbox"] + label {
+  margin-bottom: 15px;
+}
+
+
+// ===== 9. FORMS ===== //
+form {
+  border-radius: $border-radius;
+  padding: 1em;
+}
+
+.input-field {
+  margin-top: 2em;
+
+  label {
+    color: #333;
+  }
+
+  select {
+    height: 100px;
   }
 }
