--- a/static/scss/materialize/components/_form.scss
+++ b/static/scss/materialize/components/_form.scss
@@ -374,6 +374,7 @@ form p:last-child {
   + label {
     position: relative;
     padding-left: 35px;
+    margin-bottom: 15px;
     cursor: pointer;
     display: inline-block;
     height: 25px;
