minor style changes

--- a/blog/templates/blog/post_create.html
+++ b/blog/templates/blog/post_create.html
@@ -3,7 +3,7 @@
 
 {% block sidelayout_content %}
   <h1>Create New Post</h1>
-  <div class="container" style="margin-top:20px;">
+  <div class="container">
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {% crispy form %}
