--- a/main/templates/maininclude/tinymce.html
+++ b/main/templates/maininclude/tinymce.html
@@ -1,2 +1,7 @@
 <script src="//tinymce.cachefly.net/4.2/tinymce.min.js"></script>
-<script>tinymce.init({selector:'textarea'});</script>
+<script>
+  tinymce.init({
+    selector:'textarea',
+    height : 400
+  });
+</script>
