--- a/blog/templates/blog/my_blog.html
+++ b/blog/templates/blog/my_blog.html
@@ -65,7 +65,9 @@
           </div>
         </div>
         <div id="my-blog-blog" class="col s12">Edit {{ object }}</div>
-        <div id="my-blog-stats" class="col s12">Coming Soon</div>
+        <div id="my-blog-me" class="col s12">
+          <h2>Coming Soon</h2>
+        </div>
       </div>
     </div>
   <div>
