--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -25,7 +25,7 @@
 
     <section class="header no-padding">
       <img src="{% static 'img/landing.jpg' %}">
-      <div class="overlay">
+      <div class="overlay hide-on-small-only">
         <div class="inner">
           <h1 class="title" data-sr="move 50px, enter top">Travel Blog Wave</h1>
           <h5 data-sr="wait 0.5s, move 50px, enter top"><a class="btn" href="{% url 'blog-create' %}">
