push top fixed secondary headers

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -497,6 +497,12 @@ $nav-width: 15%;
   }
 }
 
+@media(max-width: $small-screen){
+  .all-posts {
+    .fixed { top: $navbar-height-mobile; }
+  }
+}
+
 .all-blogs {
   .img-blog {
     background: $light-texture;
@@ -539,13 +545,9 @@ $nav-width: 15%;
 @media(max-width:$small-screen){
   .my-blog {
     .tabs {
-      position: fixed;
-      top: 57px;
+      top: $navbar-height-mobile;
       width: 100%!important;
-      z-index: 1;
       margin-left: -10px;
-
-      li { border-bottom: 2px solid $brand-light-gray; }
     }
   }
 }
