--- a/main/templates/layouts/_sidelayout.html
+++ b/main/templates/layouts/_sidelayout.html
@@ -12,7 +12,50 @@
         </div>
         <ul class="hide-on-med-and-down">
           {% include "bloginclude/nav_items.html" %}
+          {% if not request.user.is_authenticated %}
+            <li>
+              <a href="{% url 'account_login' %}">
+                <i class="material-icons left">person</i> Login
+              </a>
+            </li>
+          {% endif %}
         </ul>
+        {% if request.user.is_authenticated %}
+          <ul class="collapsible collapsible-accordion hide-on-small-only">
+            <li class="no-push">
+              <a class="collapsible-header">Settings
+                <i class="icons material-icons left">settings</i>
+              </a>
+              <div class="collapsible-body">
+                <ul>
+                  {% if request.user.has_blog %}
+                    <li>
+                      <a {% if page == "myblog" %}class="active"{% endif %} href="{% url 'blog-my-blog' %}">
+                        <i class="material-icons left">settings</i> My Blog
+                      </a>
+                    </li>
+                  {% else %}
+                    <li>
+                      <a {% if page == "create" %}class="active"{% endif %} href="{% url 'blog-create' %}">
+                        <i class="material-icons left">add</i> Create
+                      </a>
+                    </li>
+                  {% endif %}
+                  <li>
+                    <a {% if page == "profile" %}class="active"{% endif %} href="{% url 'main-profile-update' %}">
+                      <i class="material-icons left">person</i> Me
+                    </a>
+                  </li>
+                  <li>
+                    <a href="{% url 'account_logout' %}">
+                      <i class="material-icons left">lock</i> Logout
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        {% endif %}
         <ul id="slide-out" class="side-nav">
           {% include "bloginclude/nav_items.html" %}
         </ul>
